--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,14 +24,8 @@ jobs:
     - name: Composer Install
       run: composer install -vvv
     
-    - name: Wait for MySQL
-      run: sleep 5
-
-    - name: Make Migration
-      run: make migrate
-    
     - name: Phpunit
-      run: docker-compose run --rm --no-deps dao_php sh -lc 'php ./vendor/phpunit/phpunit/phpunit -c ./tests/phpunit.xml --testdox --stderr --coverage-clover=coverage.xml'
+      run: docker-compose run --rm --no-deps dao-click-house-adapter_php_fpm sh -lc 'php ./vendor/phpunit/phpunit/phpunit -c ./tests/phpunit.xml --testdox --stderr --coverage-clover=coverage.xml'
 
     - name: Send code coverage report to Codecov.io
       uses: codecov/codecov-action@v2
