--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,6 +24,9 @@ jobs:
     - name: Composer Install
       run: composer install -vvv
     
+    - name: Containers List
+      run: docker ps
+    
     - name: Phpunit
       run: docker-compose run --rm --no-deps dao-click-house-adapter_dao_php sh -lc 'php ./vendor/phpunit/phpunit/phpunit -c ./tests/phpunit.xml --testdox --stderr --coverage-clover=coverage.xml'
 
