--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,7 +28,7 @@ jobs:
       run: docker ps
     
     - name: Phpunit
-      run: docker-compose run --rm --no-deps dao-click-house-adapter_php_fpm sh -lc 'php ./vendor/phpunit/phpunit/phpunit -c ./tests/phpunit.xml --testdox --stderr --coverage-clover=coverage.xml'
+      run: docker-compose run --rm --no-deps dao_php sh -lc 'php ./vendor/phpunit/phpunit/phpunit -c ./tests/phpunit.xml --testdox --stderr --coverage-clover=coverage.xml'
 
     - name: Send code coverage report to Codecov.io
       uses: codecov/codecov-action@v2
